--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@react-three/fiber": "^7.0.26",
     "axios": "^0.24.0",
     "framer-motion": "^5.5.5",
     "gatsby": "^3.13.1",
@@ -41,7 +42,8 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
-    "sass": "^1.42.1"
+    "sass": "^1.42.1",
+    "three": "^0.137.5"
   },
   "devDependencies": {
     "@types/react-helmet": "^6.1.3",
